--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -1,12 +1,12 @@
 
 {% extends "base.html" %} 
 {% block title %}Записи сообщества {{ group.title }} | Yatube{% endblock %} 
-{% block header %}Записи сообщества {{ group.title }} | Yatube{% endblock %}
  
 {% block content %}
-    <h1>{{ group.title }}</h1> 
+<h1>{% block header %} {{ group.title }}{% endblock %}</h1>
+    <p>{{ group.title }}</p> 
     <p>{{ group.description }}</p>
-    {% for post in page %}
+    {% for post in page_obj %}
     <h3>Автор: {{ post.author.get_full_name }}, Дата публикации: {{ post.pub_date|date:"d M Y" }}</h3>
     <p>{{ post.text|linebreaksbr }}</p>
     {% if not forloop.last %}<hr>{% endif %}
